resolve_sequrity